# fabricd

./: Cargo.toml  LICENSE  README.md  fabricd.toml
src/: config.rs  error.rs  main.rs  util.rs
src/fabric/: installer.rs  loader.rs  mod.rs
src/server/: error.rs  version.rs
